--- a/PrimeiraVersao/Views/Acompanhamento_Mes_Atual.xaml
+++ b/PrimeiraVersao/Views/Acompanhamento_Mes_Atual.xaml
@@ -3,17 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PrimeiraVersao.Views.Acompanhamento_Mes_Atual">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Padding="0,50,0,50" BackgroundColor="Black">
+            <Image Source="xamarin_logo.png" ></Image>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="70"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="250" />
-                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="90"/>
+                    <ColumnDefinition Width="180"/>
+                    <ColumnDefinition Width="70"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Text="Acompanhamento" FontSize="30" AbsoluteLayout.LayoutBounds="0,0"></Label>
-                <Button Grid.Row="0" Grid.Column="1" x:Name="btnLogout" Clicked="btnLogout_Clicked" HorizontalOptions="Center"  Text="Logout" BackgroundColor="Gray" FontSize="12"/>
+                <Button Grid.Row="0" Grid.Column="0" x:Name="btnMenu" Clicked="btnMenu_Clicked" HorizontalOptions="Center"  Text="Menu" BackgroundColor="Gray" FontSize="12"/>
+                <Label TextColor="Orange" Grid.Row="0" Grid.Column="1" Text="Acompanhamento" FontSize="20" VerticalTextAlignment="Center" AbsoluteLayout.LayoutBounds="0,0"></Label>
+                <Button Grid.Row="0" Grid.Column="2" x:Name="btnLogout" Clicked="btnLogout_Clicked" HorizontalOptions="Center"  Text="Logout" BackgroundColor="Gray" FontSize="12"/>
             </Grid>
             <Grid>
                 <Grid.RowDefinitions>
@@ -25,14 +28,15 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Button Grid.Row="0" Grid.Column="0" x:Name="btnMesAtual" Clicked="btnMesAtual_Clicked" Text="Mês Atual"  BackgroundColor="orange" AbsoluteLayout.LayoutBounds="0,50" />
-                <Button Grid.Row="0" Grid.Column="1" x:Name="btnLinhaTempo"  Text="Linha do Tempo" AbsoluteLayout.LayoutBounds="90,50"  />
+                <Button Grid.Row="0" Grid.Column="1" x:Name="btnLinhaTempo" Clicked="btnLinhaTempo_Clicked" Text="Linha do Tempo" AbsoluteLayout.LayoutBounds="90,50"  />
                 <Button Grid.Row="0" Grid.Column="2" x:Name="btnMesesAnteriores" Clicked="btnMesesAnteriores_Clicked" Text="Meses Anteriores" AbsoluteLayout.LayoutBounds="230,50"/>
             </Grid>
             
            
             
-            <Label Text="Valor já gasto:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
-            <Label Text="R$1300,00" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
+            <Label x:Name="txtPredicao" TextColor="White"  FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
+            <Label x:Name="txtProbabilidade" TextColor="White"  FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
+            
 
 
 
