--- a/PrimeiraVersao/Views/Carteira_Desp_Extras.xaml
+++ b/PrimeiraVersao/Views/Carteira_Desp_Extras.xaml
@@ -3,51 +3,56 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PrimeiraVersao.Views.Carteira_Desp_Extras">
     <ContentPage.Content>
-        <StackLayout>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="70"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="1" Text="Carteira" FontSize="50" AbsoluteLayout.LayoutBounds="0,0"></Label>
-                <Button Grid.Row="0" Grid.Column="2" x:Name="btnLogout"  HorizontalOptions="Center" Clicked="btnLogout_Clicked" Text="Logout" BackgroundColor="Gray" FontSize="12"/>
+        <ScrollView>
+            <StackLayout Padding="0,50,0,50" BackgroundColor="Black">
+                <Image Source="xamarin_logo.png" ></Image>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="70"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="180"/>
+                        <ColumnDefinition Width="80"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Row="0" Grid.Column="0" x:Name="btnMenu" Clicked="btnMenu_Clicked"  HorizontalOptions="Center"  Text="Menu" BackgroundColor="Gray" FontSize="12"/>
+                    <Label TextColor="Orange" Grid.Row="0" Grid.Column="1" Text="Carteira" FontSize="50" AbsoluteLayout.LayoutBounds="0,0"></Label>
+                    <Button Grid.Row="0" Grid.Column="2" x:Name="btnLogout"  HorizontalOptions="Center" Clicked="btnLogout_Clicked" Text="Logout" BackgroundColor="Gray" FontSize="12"/>
                 </Grid>
-            
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="70"/>               
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                
-                <Button Grid.Row="0" Grid.Column="0" x:Name="btnRenda" Clicked="btnRenda_Clicked" Text="Renda"  AbsoluteLayout.LayoutBounds="0,50"  />
-                <Button Grid.Row="0" Grid.Column="1" x:Name="btnDespFixas" Clicked="btnDespFixas_Clicked" Text="Despesas Fixas" AbsoluteLayout.LayoutBounds="90,50"/>
-                <Button Grid.Row="0" Grid.Column="2"   Text="Despesas Extras" AbsoluteLayout.LayoutBounds="230,50" BackgroundColor="orange"/>
-            </Grid>
-           
-            <Label Text="Categoria:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
-            <Picker >
-                <Picker.Items>
-                    <x:String>Option 1</x:String>
-                    <x:String>Option 2</x:String>
-                    <x:String>Option 3</x:String>
-                </Picker.Items>
-            </Picker>
-            <Label Text="Descrição:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
-            <Entry></Entry>
-            <Label Text="Valor:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
-            <Entry Placeholder="R$"></Entry>
-            <Button Text="+"></Button>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="70"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Row="0" Grid.Column="0" x:Name="btnRenda" Clicked="btnRenda_Clicked" Text="Renda"  AbsoluteLayout.LayoutBounds="0,50"  />
+                    <Button Grid.Row="0" Grid.Column="1" x:Name="btnDespFixas" Clicked="btnDespFixas_Clicked" Text="Despesas Fixas" AbsoluteLayout.LayoutBounds="90,50"/>
+                    <Button Grid.Row="0" Grid.Column="2"   Text="Despesas Extras" AbsoluteLayout.LayoutBounds="230,50" BackgroundColor="orange"/>
+                </Grid>
+
+                <Label TextColor="Orange" Text="Categoria:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
+                <Picker BackgroundColor="White">
+                    <Picker.Items>
+                        <x:String>Lazer</x:String>
+                        <x:String>Educação</x:String>
+                        <x:String>Comida</x:String>
+                        <x:String>Roupa</x:String>
+                    </Picker.Items>
+                </Picker>
+                <Label TextColor="Orange" Text="Descrição:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
+                <Entry BackgroundColor="White"></Entry>
+                <Label TextColor="Orange" Text="Valor:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
+                <Entry BackgroundColor="White" Placeholder="R$"></Entry>
+                <Button Text="+"></Button>
 
 
 
-        </StackLayout>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
