--- a/PrimeiraVersao/Views/Carteira_Renda.xaml
+++ b/PrimeiraVersao/Views/Carteira_Renda.xaml
@@ -13,11 +13,12 @@
                     <RowDefinition Height="70"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="180"/>
+                    <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
-                <Label TextColor="Orange" Grid.Row="0" Grid.Column="1" Text="Carteira" FontSize="50" AbsoluteLayout.LayoutBounds="0,0"></Label>
+                    <Button Grid.Row="0" Grid.Column="0" x:Name="btnMenu" Clicked="btnMenu_Clicked" HorizontalOptions="Center"  Text="Menu" BackgroundColor="Gray" FontSize="12"/>
+                    <Label TextColor="Orange" Grid.Row="0" Grid.Column="1" Text="Carteira" FontSize="50" AbsoluteLayout.LayoutBounds="0,0"></Label>
                 <Button Grid.Row="0" Grid.Column="2" x:Name="btnLogout" Clicked="btnLogout_Clicked" HorizontalOptions="Center"  Text="Logout" BackgroundColor="Gray" FontSize="12"/>
             </Grid>
             <Grid>
@@ -38,10 +39,9 @@
             <Label TextColor="Orange" Text="Categoria:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
             <Picker BackgroundColor="White">
                 <Picker.Items>
-                    <x:String>Option 1</x:String>
-                    <x:String>Option 2</x:String>
-                    <x:String>Option 3</x:String>
-                </Picker.Items>
+                        <x:String>Renda fixa</x:String>
+                        <x:String>Renda Variável</x:String>
+                    </Picker.Items>
             </Picker>
             <Label TextColor="Orange" Text="Descrição:" FontSize="20" AbsoluteLayout.LayoutBounds="0,120"></Label>
             <Entry BackgroundColor="White"></Entry>
