--- a/PrimeiraVersao/Views/Acompanhamento_Mes_Atual.xaml
+++ b/PrimeiraVersao/Views/Acompanhamento_Mes_Atual.xaml
@@ -1,83 +1,90 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PrimeiraVersao.Views.Acompanhamento_Mes_Atual">
-    <ContentPage.Content>
-        <ScrollView>
-            <StackLayout Padding="0,50,0,50" BackgroundColor="Black">
+             x:Class="PrimeiraVersao.Views.Acompanhamento_Mes_Atual"
+             xmlns:chart="clr-namespace:Syncfusion.SfChart.XForms;assembly=Syncfusion.SfChart.XForms" >
+   
+    <ScrollView>
+        <StackLayout Padding="0,50,0,50" BackgroundColor="black">
+            <Image Source="xamarin_logo.png" ></Image>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="90"/>
+                    <ColumnDefinition Width="180"/>
+                    <ColumnDefinition Width="70"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Row="0" Grid.Column="0" x:Name="btnMenu" Clicked="btnMenu_Clicked" HorizontalOptions="Center"  Text="Menu" BackgroundColor="Gray" FontSize="12"/>
+                <Label TextColor="Orange" Grid.Row="0" Grid.Column="1" Text="Acompanhamento" FontSize="20" VerticalTextAlignment="Center" AbsoluteLayout.LayoutBounds="0,0"></Label>
+                <Button Grid.Row="0" Grid.Column="2" x:Name="btnLogout" Clicked="btnLogout_Clicked" HorizontalOptions="Center"  Text="Logout" BackgroundColor="Gray" FontSize="12"/>
+            </Grid>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Row="0" Grid.Column="0" x:Name="btnPredicao"   Clicked="btnPredicao_Clicked" Text="Predição"  AbsoluteLayout.LayoutBounds="0,50" />
+                <Button Grid.Row="0" Grid.Column="1" x:Name="btnLinhaTempo" Clicked="btnLinhaTempo_Clicked" Text="Linha do Tempo" AbsoluteLayout.LayoutBounds="90,50"  />
+                <Button Grid.Row="0" Grid.Column="2" x:Name="btnMesAtual"  Text="Mês atual" AbsoluteLayout.LayoutBounds="230,50" BackgroundColor="orange"/>
+            </Grid>
 
-                <Image Source="xamarin_logo.png" ></Image>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="70"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="90"/>
-                        <ColumnDefinition Width="180"/>
-                        <ColumnDefinition Width="70"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Row="0" Grid.Column="0" x:Name="btnMenu" Clicked="btnMenu_Clicked" HorizontalOptions="Center"  Text="Menu" BackgroundColor="Gray" FontSize="12"/>
-                    <Label TextColor="Orange" Grid.Row="0" Grid.Column="1" Text="Acompanhamento" FontSize="20" VerticalTextAlignment="Center" AbsoluteLayout.LayoutBounds="0,0"></Label>
-                    <Button Grid.Row="0" Grid.Column="2" x:Name="btnLogout" Clicked="btnLogout_Clicked" HorizontalOptions="Center"  Text="Logout" BackgroundColor="Gray" FontSize="12"/>
-                </Grid>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="70"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Row="0" Grid.Column="0" x:Name="btnMesAtual" Clicked="btnMesAtual_Clicked" Text="Mês Atual"  BackgroundColor="orange" AbsoluteLayout.LayoutBounds="0,50" />
-                    <Button Grid.Row="0" Grid.Column="1" x:Name="btnLinhaTempo" Clicked="btnLinhaTempo_Clicked" Text="Linha do Tempo" AbsoluteLayout.LayoutBounds="90,50"  />
-                    <Button Grid.Row="0" Grid.Column="2" x:Name="btnMesesAnteriores" Clicked="btnMesesAnteriores_Clicked" Text="Meses Anteriores" AbsoluteLayout.LayoutBounds="230,50"/>
-                </Grid>    
-                
-                
-                
-                
-                <Label TextColor="Orange" Text="Escolaridade"  FontAttributes="Bold"/>
-                <Picker BackgroundColor="White" x:Name="cbEscolaridade">
-                    <Picker.Items>
-                        <x:String>Ensino Fundamental Incompleto</x:String>
-                        <x:String>Ensino Fundamental Completo</x:String>
-                        <x:String>Ensino Medio Incompleto</x:String>
-                        <x:String>Ensino Medio Completo</x:String>
-                        <x:String>Ensino Superior incompleto</x:String>
-                        <x:String>Ensino Superior Completo</x:String>
-                        <x:String>Pos graduacao / Mestrado, etc.</x:String>
-                        
-                    </Picker.Items>
-                </Picker>                
-                <Label TextColor="Orange" Text="Já esteve com nome sujo?" FontAttributes="Bold"/>
-                <Picker BackgroundColor="White" x:Name="cbNomeSujoPassado">
-                    <Picker.Items>
-                        <x:String>Sim</x:String>
-                        <x:String>Não</x:String>
-                    </Picker.Items>
-                </Picker>
-                <Label TextColor="Orange" Text="Tem contas atrasadas?"   FontAttributes="Bold"/>
-                <Picker BackgroundColor="White" x:Name="cbContasAtrasadas">
-                    <Picker.Items>
-                        <x:String>Sim</x:String>
-                        <x:String>Não</x:String>
-                    </Picker.Items>
-                </Picker>
-                <Label TextColor="Orange" Text="Se sim, quanto tempo?"   FontAttributes="Bold"/>
-                <Entry Keyboard="Numeric" BackgroundColor="White" x:Name="txtTempoAtrasado" ></Entry>
-                <Label TextColor="Orange" Text="Renda mensal"   FontAttributes="Bold"/>
-                <Entry Keyboard="Numeric" BackgroundColor="White" x:Name="txtRenda" ></Entry>
-                <Label TextColor="Orange" Text="Despesas fixas mensal"   FontAttributes="Bold"/>
-                <Entry Keyboard="Numeric" BackgroundColor="White" x:Name="txtDespFixas" ></Entry>
-                <Label TextColor="Orange" Text="Despesas variáveis mensal"   FontAttributes="Bold"/>
-                <Entry Keyboard="Numeric" BackgroundColor="White" x:Name="txtDespVariaveis" ></Entry>
-                <Button BackgroundColor="Orange" x:Name="btnPredicao"  Clicked="btnPredicao_Clicked"   Text="Prever inadimplencia"></Button>
-            
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="200"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <chart:SfChart Grid.Row="0" Grid.Column="0" BackgroundColor="Transparent" x:Name="GraficoDespRenda">
 
+                    <chart:SfChart.Title>
+                        <chart:ChartTitle BackgroundColor="Transparent" TextColor="White" BorderColor="Transparent" Text="Despesas x Renda"/>
+                    </chart:SfChart.Title>
+                    <chart:SfChart.Legend>
+                        <chart:ChartLegend  BackgroundColor="white"></chart:ChartLegend>
+                    </chart:SfChart.Legend>
+
+                    <chart:SfChart.PrimaryAxis>
+                        <chart:CategoryAxis>
+                            <chart:CategoryAxis.Title>
+                                <chart:ChartAxisTitle Text="Data" TextColor="white"></chart:ChartAxisTitle>
+                            </chart:CategoryAxis.Title>
+                            <chart:CategoryAxis.LabelStyle>
+                                <chart:ChartAxisLabelStyle  TextColor="white"></chart:ChartAxisLabelStyle>
+                            </chart:CategoryAxis.LabelStyle>
+                        </chart:CategoryAxis>
+
+                    </chart:SfChart.PrimaryAxis>
+
+                    <chart:SfChart.SecondaryAxis>
+                        <chart:NumericalAxis>
+                            <chart:NumericalAxis.Title>
+                                <chart:ChartAxisTitle Text="Despesas" TextColor="white"></chart:ChartAxisTitle>
+                            </chart:NumericalAxis.Title>
+                            <chart:NumericalAxis.LabelStyle>
+                                <chart:ChartAxisLabelStyle LabelFormat="R$ ##" TextColor="white"></chart:ChartAxisLabelStyle>
+                            </chart:NumericalAxis.LabelStyle>
+                        </chart:NumericalAxis>
+
+                    </chart:SfChart.SecondaryAxis>
 
 
-            </StackLayout>
-        </ScrollView>
-    </ContentPage.Content>
+                    <chart:ColumnSeries ItemsSource="{Binding graficos}"  x:Name="ColunaDespesas" XBindingPath="Data" Label="Despesas"  Color="Red" YBindingPath="Despesas" />
+
+                    <chart:ColumnSeries ItemsSource="{Binding graficos}" x:Name="ColunaRenda" XBindingPath="Data" Label="Renda"  Color="Green" YBindingPath="Renda" />
+                </chart:SfChart>
+
+                <!--<forms:ChartView x:Name="Grafico" HeightRequest="150" />-->
+
+            </Grid>
+
+
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
